--- a/assets/css/partials/_base.scss
+++ b/assets/css/partials/_base.scss
@@ -39,10 +39,12 @@ a{
     border: none;
     background-color: transparent;
     cursor: pointer;
+    min-width: 4rem;
+    min-height: 4rem;
     position: relative;
 
     i{
-        font-size: 2rem;
+        font-size: 1rem;
     }
 
 
@@ -55,7 +57,6 @@ a{
         polygon {
             fill: transparent;
             stroke: $universal-color-1;
-            opacity: .5;
             transition: all ease-in-out .5s;
         }
 
