--- a/assets/css/partials/_fonts.scss
+++ b/assets/css/partials/_fonts.scss
@@ -1,43 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
-    font-family: 'icomoon';
-    src:  url('fonts/icomoon.eot?ukr5gu');
-    src:  url('fonts/icomoon.eot?ukr5gu#iefix') format('embedded-opentype'),
-      url('fonts/icomoon.ttf?ukr5gu') format('truetype'),
-      url('fonts/icomoon.woff?ukr5gu') format('woff'),
-      url('fonts/icomoon.svg?ukr5gu#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-d-view:before {
-    content: "\e900";
-  }
-  .icon-arrow:before {
-    content: "\e901";
-  }
-  .icon-ask-me:before {
-    content: "\e902";
-  }
-  .icon-play:before {
-    content: "\e903";
-  }
-  .icon-search:before {
-    content: "\e904";
-  }
-  
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?nwlxn2');
+  src:  url('fonts/icomoon.eot?nwlxn2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?nwlxn2') format('truetype'),
+    url('fonts/icomoon.woff?nwlxn2') format('woff'),
+    url('fonts/icomoon.svg?nwlxn2#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-d-view:before {
+  content: "\e900";
+}
+.icon-arrow:before {
+  content: "\e901";
+}
+.icon-ask-me:before {
+  content: "\e902";
+}
+.icon-navbar-icon:before {
+  content: "\e903";
+}
+.icon-play:before {
+  content: "\e904";
+}
+.icon-search:before {
+  content: "\e905";
+}
