--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 
 
 .main-navbar {
-    background-color: $universal-color-1;
+    background-color: $theme-color;
     position: fixed;
     top: 0;
     left: 0;
@@ -18,9 +18,37 @@
         font-size: clamp(1rem, .2vw, 1.5rem);
         text-transform: uppercase;
 
+
         i {
             font-size: 1.5rem;
         }
+    &.navbar-link{
+        position: relative;
+        overflow: hidden;
+        &::after{
+            position: absolute;
+            content: '';
+            bottom: 0;
+            left: 0;
+            margin-top: 2rem;
+            background-color: $universal-color-2;
+            width: 100%;
+            height: 1px;
+            transform: translateX(-100%);
+            transition: all ease-in-out .3s;
+
+        }
+
+
+        &:hover{
+            &::after{
+                transform: translateX(0);
+            }
+        }
+    }
+
+
+       
 
     }
 
@@ -32,30 +60,36 @@
 
 
 .main-hero-section {
-    padding-top: 6rem!important;
+    padding: 12rem 0 6rem 0;
     position: relative;
     width: 100%;
-    height: 1000px;
-    overflow: hidden;
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
 
 
 
     video{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         filter: brightness(50%) contrast(120%);
+        z-index: 1;
+        object-fit: cover;
     }
 }
 
 
 
 .video-caption {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: $universal-color-2;
     font-size: 24px;
     font-weight: bold;
-    z-index: 2;
+    z-index: 50;
 
     h2{
         padding-bottom: 2rem;
@@ -91,14 +125,10 @@
    
 }
 .car-specs{
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: $universal-color-2;
     font-size: 24px;
     font-weight: bold;
-    z-index: 2;
+    z-index: 50;
     ul{
         li{
             b{
@@ -146,11 +176,48 @@ section.augmented-reality {
         }
      }
      .hello{
-        display: block!important;
+        display: block;
      }
   
 }
 
+
+.augmented-wrapper{
+    justify-content: space-between;
+    align-items: center;
+    .augmented-image{
+        width: 60%;
+        position: relative;
+
+        figure{
+            width: 100%;
+            aspect-ratio: 1 / 0.45;
+            clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+    
+            }
+        }
+
+
+        .lambo{
+            position: absolute;
+            top: 75%;
+            left: 70%;
+            transform: translate(-50%, -50%);
+            width: 700px;
+            aspect-ratio: 1 / 0.5;
+            object-fit: cover;
+        }
+
+    }
+    .augmented-caption{
+        width: 30%;
+    }
+}
 
 
 
