--- a/assets/css/partials/_mediaqueries.scss
+++ b/assets/css/partials/_mediaqueries.scss
@@ -1,3 +1,16 @@
+@media (max-width:1200px){
+    .augmented-wrapper{
+        flex-direction: column;
+        align-items: flex-start;
+
+        .augmented-image{
+            width: 100%;
+        }
+        .augmented-caption{
+            width: 100%;
+        }
+    }
+}
 @media (max-width:991px){
 
     .main-navbar{
@@ -12,14 +25,6 @@
         }
     }
     .car-specs{
-        position: absolute;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: $universal-color-2;
-        font-size: 24px;
-        font-weight: bold;
-        z-index: 2;
         ul{
             flex-direction: column;
             li{
@@ -28,7 +33,6 @@
         }
     }
     section.augmented-reality {
-        margin-bottom: 5rem;
         .row [class^="col-"] {
             flex-direction: column;
             text-align: center;
@@ -40,7 +44,6 @@
 
         }    
         .col-inner{
-            position: relative;
             .lambo{
                 width: 300px;
             }
