--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?nwlxn2");
-  src: url("fonts/icomoon.eot?nwlxn2#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?nwlxn2") format("truetype"), url("fonts/icomoon.woff?nwlxn2") format("woff"), url("fonts/icomoon.svg?nwlxn2#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?7mcsu9");
+  src: url("fonts/icomoon.eot?7mcsu9#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?7mcsu9") format("truetype"), url("fonts/icomoon.woff?7mcsu9") format("woff"), url("fonts/icomoon.svg?7mcsu9#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12039,6 +12039,20 @@ a {
   max-width: 1600px;
 }
 
+.section-space-sm {
+  margin-bottom: 5rem;
+}
+
+.section-space-lg {
+  margin-bottom: 10rem;
+}
+
+.partial-container-right {
+  max-width: calc((1600px) + 50% - 1600px / 2);
+  padding-right: 1rem;
+  margin-right: auto;
+}
+
 .hero-caption-space {
   padding-bottom: 5rem;
 }
@@ -12055,8 +12069,8 @@ a {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  min-width: 4rem;
-  min-height: 4rem;
+  width: 4rem;
+  height: 4rem;
   position: relative;
 }
 .theme-button i {
@@ -12110,12 +12124,15 @@ a {
   margin-top: 2rem;
   background-color: #ffffff;
   width: 100%;
+  text-align: center;
   height: 1px;
   transform: translateX(-100%);
-  transition: all ease-in-out 0.3s;
+  transition: all ease-in-out 0.5s;
+  opacity: 0;
 }
 .main-navbar .nav-link.navbar-link:hover::after {
   transform: translateX(0);
+  opacity: 1;
 }
 
 .navbar-toggler {
@@ -12137,7 +12154,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  filter: brightness(50%) contrast(120%);
+  filter: brightness(50%) contrast(100%);
   z-index: 1;
   -o-object-fit: cover;
      object-fit: cover;
@@ -12191,73 +12208,82 @@ a {
   margin-right: 3rem;
 }
 
-section.augmented-reality {
-  margin-bottom: 5rem;
-}
-section.augmented-reality .col-inner {
-  display: flex;
-  align-items: center;
-  min-height: 100%;
-  position: relative;
-}
-section.augmented-reality .col-inner .lambo {
-  position: absolute;
-  top: 80%;
-  left: 60%;
-  transform: translate(-50%, -50%);
-  width: 700px;
-  aspect-ratio: 1/0.5;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-section.augmented-reality .col-inner figure {
-  width: 100%;
-  aspect-ratio: 1/0.45;
-  -webkit-clip-path: polygon(0 0, 100% 0%, 60% 100%, 0 100%);
-          clip-path: polygon(0 0, 100% 0%, 60% 100%, 0 100%);
-}
-section.augmented-reality .col-inner figure img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-section.augmented-reality .hello {
-  display: block;
-}
-
 .augmented-wrapper {
   justify-content: space-between;
   align-items: center;
 }
-.augmented-wrapper .augmented-image {
-  width: 60%;
+
+.augmented-image {
+  width: 65%;
   position: relative;
 }
-.augmented-wrapper .augmented-image figure {
+.augmented-image figure {
   width: 100%;
-  aspect-ratio: 1/0.45;
+  aspect-ratio: 1/0.5;
   -webkit-clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
           clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
+  z-index: 1;
+  overflow: hidden;
 }
-.augmented-wrapper .augmented-image figure img {
+.augmented-image figure img.main {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.augmented-wrapper .augmented-image .lambo {
+.augmented-image figure img.lambo {
   position: absolute;
-  top: 75%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-  width: 700px;
-  aspect-ratio: 1/0.5;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1000;
+}
+.augmented-image .augmented-caption {
+  width: 25%;
+}
+.augmented-image .augmented-caption .qr-png {
+  width: 120px;
+  height: 120px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.augmented-wrapper .augmented-caption {
-  width: 30%;
+
+.main-video-section-wrapper .video-inner {
+  position: relative;
+  z-index: 1;
+}
+.main-video-section-wrapper .video-inner .main-video {
+  width: 100%;
+  height: 500px;
+  filter: brightness(50%) contrast(100%);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  width: 5rem;
+  height: 5rem;
+  color: #ffffff;
+}
+.play-button i {
+  font-size: 1.5rem;
+}
+.play-button svg polygon {
+  stroke: #ffffff;
+}
+.play-button:hover {
+  color: #000000 !important;
+}
+.play-button:hover polygon {
+  fill: #ffffff;
 }
 
 @media (max-width: 1200px) {
@@ -12276,6 +12302,12 @@ section.augmented-reality .hello {
   .main-navbar .navbar-wrapper {
     background-color: #000000;
   }
+  .main-navbar .navbar-wrapper .lg-show {
+    display: flex !important;
+  }
+  .main-navbar .navbar-wrapper .lg-hide {
+    display: none;
+  }
   .video-caption br {
     display: none !important;
   }
@@ -12284,15 +12316,5 @@ section.augmented-reality .hello {
   }
   .car-specs ul li {
     margin-bottom: 1.5rem;
-  }
-  section.augmented-reality .row [class^=col-] {
-    flex-direction: column;
-    text-align: center;
-  }
-  section.augmented-reality .row [class^=col-]:not(:last-child) {
-    padding-bottom: 3rem;
-  }
-  section.augmented-reality .col-inner .lambo {
-    width: 300px;
   }
 }/*# sourceMappingURL=main.css.map */
