--- a/assets/css/partials/_fonts.scss
+++ b/assets/css/partials/_fonts.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nwlxn2');
-  src:  url('fonts/icomoon.eot?nwlxn2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nwlxn2') format('truetype'),
-    url('fonts/icomoon.woff?nwlxn2') format('woff'),
-    url('fonts/icomoon.svg?nwlxn2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?7mcsu9');
+  src:  url('fonts/icomoon.eot?7mcsu9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?7mcsu9') format('truetype'),
+    url('fonts/icomoon.woff?7mcsu9') format('woff'),
+    url('fonts/icomoon.svg?7mcsu9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
