--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12235,8 +12235,8 @@ a {
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  width: 700px;
+  height: 300px;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 1000;
