--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -192,8 +192,8 @@
                 position: absolute;
                 bottom: 0;
                 right: 0;
-                width: 100%;
-                height: 100%;
+                width: 700px;
+                height: 300px;
                 object-fit: cover;
                 z-index: 1000;
 
