--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?7mcsu9");
-  src: url("fonts/icomoon.eot?7mcsu9#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?7mcsu9") format("truetype"), url("fonts/icomoon.woff?7mcsu9") format("woff"), url("fonts/icomoon.svg?7mcsu9#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?hrhawa");
+  src: url("fonts/icomoon.eot?hrhawa#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?hrhawa") format("truetype"), url("fonts/icomoon.woff?hrhawa") format("woff"), url("fonts/icomoon.svg?hrhawa#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -38,12 +38,20 @@
   content: "\e903";
 }
 
-.icon-play:before {
+.icon-pause_icon:before {
   content: "\e904";
 }
 
-.icon-search:before {
+.icon-play:before {
   content: "\e905";
+}
+
+.icon-play-33:before {
+  content: "\e906";
+}
+
+.icon-search:before {
+  content: "\e907";
 }
 
 /*!
@@ -12043,6 +12051,10 @@ a {
   margin-bottom: 5rem;
 }
 
+.section-space-md {
+  margin-bottom: 7rem;
+}
+
 .section-space-lg {
   margin-bottom: 10rem;
 }
@@ -12208,47 +12220,50 @@ a {
   margin-right: 3rem;
 }
 
-.augmented-wrapper {
-  justify-content: space-between;
+.augmented-reality .augmented-reality-wrapper {
+  display: flex;
   align-items: center;
 }
-
-.augmented-image {
-  width: 65%;
-  position: relative;
+.augmented-reality .augmented-image {
+  width: 60%;
 }
-.augmented-image figure {
+.augmented-reality .augmented-image figure {
+  position: relative;
   width: 100%;
-  aspect-ratio: 1/0.5;
+  aspect-ratio: 1/0.55;
+  z-index: 1;
+}
+.augmented-reality .augmented-image figure img.main {
+  position: absolute;
   -webkit-clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
           clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
-  z-index: 1;
-  overflow: hidden;
-}
-.augmented-image figure img.main {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.augmented-image figure img.lambo {
+.augmented-reality .augmented-image figure img.lambo {
   position: absolute;
   bottom: 0;
-  right: 0;
-  width: 700px;
-  height: 300px;
+  left: 65%;
+  transform: translateX(-50%);
+  width: 60%;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 1000;
 }
-.augmented-image .augmented-caption {
+.augmented-reality .augmented-image .augmented-caption {
   width: 25%;
 }
-.augmented-image .augmented-caption .qr-png {
-  width: 120px;
-  height: 120px;
+.augmented-reality .augmented-image .augmented-caption img.qr-png {
+  height: 20px;
+  width: 20px;
   -o-object-fit: cover;
      object-fit: cover;
+  background-color: red;
+}
+.augmented-reality .augmented-image .augmented-caption img.qr-png:hover {
+  transform: translateX(-100%);
 }
 
 .main-video-section-wrapper .video-inner {
@@ -12287,15 +12302,19 @@ a {
 }
 
 @media (max-width: 1200px) {
-  .augmented-wrapper {
+  .augmented-reality .augmented-reality-wrapper {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
-  .augmented-wrapper .augmented-image {
+  .augmented-reality .augmented-image {
     width: 100%;
   }
-  .augmented-wrapper .augmented-caption {
+  .augmented-reality .augmented-caption {
     width: 100%;
+    padding: 3rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media (max-width: 991px) {
@@ -12316,5 +12335,10 @@ a {
   }
   .car-specs ul li {
     margin-bottom: 1.5rem;
+  }
+  .augmented-reality .col-inner {
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center;
   }
 }/*# sourceMappingURL=main.css.map */
