--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -159,28 +159,31 @@
 }
 
 
+.augmented-reality{
+    .augmented-reality-wrapper{
+        display: flex;
+        align-items: center;
 
 
-.augmented-wrapper {
-    justify-content: space-between;
-    align-items: center;
-
-}
+    }
 
     .augmented-image {
-        width: 65%;    
-        position: relative;        
+        width: 60%;
+
+   
 
         figure {
+            position: relative;     
             width: 100%;
-            aspect-ratio: 1 / 0.5;
-            clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
+            aspect-ratio: 1 / 0.55;
             z-index: 1;
-            overflow: hidden;
+
 
 
 
             img.main {
+                position: absolute;
+                clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -191,9 +194,9 @@
             img.lambo {
                 position: absolute;
                 bottom: 0;
-                right: 0;
-                width: 700px;
-                height: 300px;
+                left: 65%;
+                transform: translateX(-50%);
+                width: 60%;
                 object-fit: cover;
                 z-index: 1000;
 
@@ -207,15 +210,26 @@
     .augmented-caption {
         width: 25%;
 
-        .qr-png {
-            width: 120px;
-            height: 120px;
+
+        img.qr-png {
+            height: 20px;
+            width: 20px;
             object-fit: cover;
+            background-color: red;
+
+
+            &:hover{
+                transform: translateX(-100%);
+            }
         }
     }
 }
 
 
+}
+
+
+   
 
 .main-video-section-wrapper {
 
@@ -268,8 +282,6 @@
     }
 
 }
-
-
 
 
 
