--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12116,6 +12116,9 @@ a {
   width: 100%;
   height: 6rem;
 }
+.main-navbar .navbar-brand img {
+  height: 4rem;
+}
 .main-navbar .nav-link {
   color: #ffffff !important;
   font-size: clamp(1rem, 0.2vw, 1.5rem);
@@ -12256,11 +12259,10 @@ a {
   width: 25%;
 }
 .augmented-reality .augmented-image .augmented-caption img.qr-png {
-  height: 20px;
-  width: 20px;
+  height: 80px;
+  width: 80px;
   -o-object-fit: cover;
      object-fit: cover;
-  background-color: red;
 }
 .augmented-reality .augmented-image .augmented-caption img.qr-png:hover {
   transform: translateX(-100%);
@@ -12318,6 +12320,9 @@ a {
   }
 }
 @media (max-width: 991px) {
+  .main-navbar .navbar-nav {
+    margin-bottom: 0 !important;
+  }
   .main-navbar .navbar-wrapper {
     background-color: #000000;
   }
