--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,11 @@
     z-index: 100;
     width: 100%;
     height: 6rem;
+    .navbar-brand{
+        img{
+            height: 4rem;
+        }
+    }
 
     .nav-link {
         color: $universal-color-2 !important;
@@ -212,10 +217,9 @@
 
 
         img.qr-png {
-            height: 20px;
-            width: 20px;
+            height: 80px;
+            width: 80px;
             object-fit: cover;
-            background-color: red;
 
 
             &:hover{
