--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,12 @@
 
 
 
+
+
+
+
+
+
 .main-navbar {
     background-color: $theme-color;
     position: fixed;
@@ -11,7 +17,6 @@
     left: 0;
     z-index: 100;
     width: 100%;
-    height: 6rem;
     .navbar-brand{
         img{
             height: 4rem;
@@ -165,15 +170,15 @@
 
 
 .augmented-reality{
-    .augmented-reality-wrapper{
+    margin-bottom: 15rem;
+    .col-inner{
+        height: 100%;
         display: flex;
-        align-items: center;
-
-
+        justify-content: center;
+        flex-direction: column;
     }
 
     .augmented-image {
-        width: 60%;
 
    
 
@@ -212,20 +217,16 @@
 
 
 
-    .augmented-caption {
-        width: 25%;
+   
+}
+.augmented-caption {
 
 
-        img.qr-png {
-            height: 80px;
-            width: 80px;
-            object-fit: cover;
+    img.qr-png {
+        height: 80px;
+        width: 80px;
+        object-fit: cover;
 
-
-            &:hover{
-                transform: translateX(-100%);
-            }
-        }
     }
 }
 
@@ -234,12 +235,18 @@
 
 
    
+   
+
+
+
 
 .main-video-section-wrapper {
 
     .video-inner {
         position: relative;
         z-index: 1;
+        min-height: 100%;
+        width: 100%;
 
         .main-video {
             width: 100%;
@@ -249,6 +256,18 @@
 
            
 
+        }
+
+        &::after{
+            content: '';
+            position: absolute;
+            top: 10%;
+            transform: translateY(-50%);
+            left: 0;
+            width: 100%;
+            height: 80%;
+            background-color: #F8F8F7;
+            z-index: -1;
         }
 
     }
@@ -287,8 +306,40 @@
 
 }
 
+section.overview{
+    height: 100%;
+    .col-inner{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 
+}
 
+.overview-image{
+    height: 100%;
+    figure{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/.5;
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%, 0% 50%);
+        }
+    }
+}
+
+.overview-cap{
+    height: 100%;
+}
 
 
 
